--- a/src/styling/work-experience.css
+++ b/src/styling/work-experience.css
@@ -20,10 +20,18 @@
     /* border: 2px solid blue; */
 }
 
-#WEX-Title{
+.WEX-Title{
     display: flex;
     justify-content: center;
     text-align: center;
+
+    
+}
+
+.WEX-Title h2{
+    background-color: #FAEFDC;
+
+    color: #113A6A;
 }
 
 #Work-Experience h2{
@@ -31,12 +39,12 @@
 
     padding: 1%;
     
-    background-color: #FAEFDC;
+    
 
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.7);
     border-radius: 10px;
 
-    color: #113A6A;
+    
     font-family: 'Montserrat', sans-serif;
     font-size: 280%;
     margin-bottom: 2%;
